# rasterra

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  404.html  CHANGELOG.md  LICENSE  README.md  README.md.rej  TODO.md  index.html  mkdocs.yml  mkdocs.yml.rej  objects.inv  pyproject.toml  pyproject.toml.rej
.github/actions/python-poetry-env/: action.yml  action.yml.rej
.github/alternative_workflows/: build_docs.yml
.github/workflows/: cookiecutter.yml  cookiecutter.yml.rej  dependencies.yml  dependencies.yml.rej  draft_release.yml  mkdocs.yaml  release.yml  test.yml  test.yml.rej
api_docs/: index.html
changelog/: index.html
contributing/: index.html
docs/: api_docs.md  contributing.md
reference/SUMMARY/: index.html
reference/rasterra/: index.html
reference/rasterra/_array/: index.html
reference/rasterra/_features/: index.html
reference/rasterra/_io/: index.html
reference/rasterra/_merge/: index.html
reference/rasterra/_plotting/: index.html
reference/rasterra/_typing/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/rasterra/: __init__.py  _array.py  _dataset.py  _dispatch.py  _features.py  _io.py  _merge.py  _plotting.py  _typing.py  cli.py
src/rasterra/_ops/: arraylike.py  roperator.py
tests/: test_rasterra.py  test_rasterra.py.rej
