[tool.poetry]
name = "rasterra"
version = "0.5.2"
description = "A sleek, object-oriented interface designed for intuitive raster data manipulation in Python."
authors = [
    "James Collins <collijk1@gmail.com>",
]
license = "BSD-3-Clause"
readme = "README.md"

documentation = "https://collijk.github.io/rasterra"
homepage = "https://collijk.github.io/rasterra"
repository = "https://github.com/collijk/rasterra"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "rasterra", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pyproj = "^3.6.0"
numpy = "^1.26.0"
affine = "^2.4.0"
shapely = "^2.0.1"
click = "*"
rasterio = "^1.3.9"
matplotlib = "^3.8.1"
geopandas = "^0.14.1"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mkdocs-table-reader-plugin = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
my-cli = "rasterra.cli:main"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov rasterra \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "affine",
    "rasterio.*",
    "shapely.*",
    "mpl_toolkits.*",
    "geopandas.*",
]
ignore_missing_imports = true

[tool.tryceratops]
ignore=["TRY003"]

[tool.autoflake]
ignore-init-module-imports = true
